public/style.css
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
     font-size: 12px;
     letter-spacing: .5px;
     scroll-behavior: smooth;
 }

 body {
     overflow-x: hidden;
 }

 :root {
     --primary: #5000ca;
     --secondary: #E7008A;
     --lightBlue: #38bdf8;
     --gray: #6b7280;
     --dark: #273036;
     --deeppurple: #160f24;
     --light: #F3F4F5;
 }

 a {
     color: var(--primary);
 }

 a:hover {
     color: var(--dark);
 }

 .bar {
     height: .618rem;
     width: 100vw;
     display: block;
     background: var(--primary);
     background: linear-gradient(90deg, var(--primary) 20%, var(--secondary) 100%);
 }

 .nav {
     position: sticky;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     width: 100%;
     height: 5rem;
     padding: 1rem 1rem 0rem 1rem;
     font-size: 16px;
     overflow: hidden;
 }

 .nav span {
     margin: 1rem;
     display: flex;
     flex-direction: row;
     align-items: center;
     width: 100%;
 }

 .nav a {
     font-size: 16px;
     text-decoration: none;
     color: var(--dark);
     overflow: hidden;
 }

 .nav a:hover {
     color: var(--primary);
 }

 .mobileNav {
     display: none;
     flex-direction: column;
     width: 100vw;
 }

 .search {
     width: 100vw;
     height: 6rem;
     padding: 1rem;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     border-bottom: 1px solid #CCC;
     overflow: hidden;
 }

 .search input {
     width: 50%;
     padding: 1rem;
     font-size: 16px;
     border: .5px solid var(--light);
     outline: .5px solid var(--light);
 }

 .search button {
     border: none;
     outline: none;
     cursor: pointer;
     text-transform: uppercase;
     width: 5%;
     height: 100%;
     background-color: var(--light);
 }

 .search button img {
     height: 2rem;
 }

 .mobileMenu {
     display: none;
     background-image: url("./menu.png");
     background-position: center;
     background-repeat: no-repeat;
     width: 24px;
     height: 24px;
     cursor: pointer;
 }

 .menu {
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: baseline;
     justify-content: flex-end;
     list-style-type: none;
     margin: 0;
     padding: 0;
 }

 .menu span {
     display: flex;
     justify-content: flex-end;
     width: fit-content;
 }

 .menu span {
     justify-content: flex-end;
 }

 .menu li {
     margin: 0 1rem 0 1rem;
     width: fit-content;
     overflow: hidden;
 }

 #menu-toggle {
     display: none;
 }

 .header {
     overflow: visible;
 }

 .header img {
     width: 200px;
 }

 .banner {
     height: 5rem;
     padding: 2rem;
     display: flex;
     align-items: center;
     width: 100vw;
     justify-content: center;
     font-size: 22px;
     font-weight: bold;
 }

 .banner span {
     font-size: 22px;
     font-weight: bold;
     color: var(--primary);
 }

 .primary {
     font-size: inherit;
     font-weight: inherit;
     line-height: inherit;
     color: var(--primary);
 }

 .secondary {
     font-size: inherit;
     font-weight: inherit;
     line-height: inherit;
     color: var(--secondary);
 }

 .dark {
     font-size: inherit;
     font-weight: inherit;
     line-height: inherit;
     color: var(--dark);
 }

 .gray {
     font-size: inherit;
     font-weight: inherit;
     line-height: inherit;
     color: var(--gray);
 }

 .landing {
     min-height: 80vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     flex-direction: row;
 }

 .landingText {
     padding: 4rem 1rem 2rem 2rem;
     display: flex;
     flex-direction: column;
     width: 100%;
 }

 .headline {
     font-size: 38px;
     letter-spacing: -.01rem;
     line-height: 4rem;
     color: var(--primary);
     padding: 1rem 4rem 0rem 2rem;
 }

 .subHeader {
     font-size: 22px;
     color: var(--gray);
     padding: 1rem 2rem 2rem 2rem;
 }

 .introText {
     font-size: 20px;
     padding: 1rem 2rem 1rem 2rem;
     line-height: 2rem;
 }

 .introText span {
     font-size: 20px;
     line-height: 2.5rem;
     color: var(--secondary);
     margin-bottom: .5rem;
 }

 .introPrimary {
     font-size: 18px;
     color: var(--primary);
 }

 .introSecondary {
     font-size: 18px;
     color: var(--secondary);
 }

 .actions {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     margin: 2rem;
 }

 .getStartedButton {
     color: #FFF;
     background-color: var(--primary);
     font-size: 22px;
     padding: 1rem 2rem 1rem 2rem;
     margin: 2rem 1rem 1rem 0rem;
     outline: none;
     border: none;
     cursor: pointer;
     text-decoration: none;
 }

 .learnMore {
     background-color: #FFF;
     font-size: 22px;
     padding: 1rem 2rem 1rem 2rem;
     margin: 2rem 1rem 1rem 0rem;
     outline: none;
     border: none;
     text-decoration: none;
 }

 .getStartedButton:hover {
     color: #fff;
     background-color: var(--primary);
 }

 .introVideo {
     z-index: 10;
     display: flex;
     flex-direction: column;
     width: 100%;
     padding: 5rem 2rem 2rem 0rem;
 }

 .introVideo nav {
     height: 1rem;
     text-transform: uppercase;
     color: var(--gray);
     margin-bottom: 1rem;
 }

 .introVideo nav span {
     padding: .5rem;
     border-right: 1px solid var(--gray);
 }

 .introVideo nav span:last-child {
     border: none;
 }

 .carouselViewport {
     width: 100%;
     height: auto;
     display: flex;
     overflow: hidden;
     scroll-snap-type: x mandatory;
 }

 .slide {
     position: relative;
     flex: 0 0 100%;
     height: 100%;
     width: 100%;
     object-fit: cover;
     scroll-snap-align: center;
 }

 .slide video {
     width: 100%;
 }

 .videoButtons {
     width: 100%;
     display: flex;
     flex-direction: row;
 }
/* ... */

